Replace recharts with victory

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "recharts": "^2.0.9"
+    "victory": "^35.6.0"
   },
   "browserslist": [
     "last 2 versions",
